# PicoAdapterGB

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
picow/: CMakeLists.txt
picow/src/: config_menu.c  flash_eeprom.c  globals.h  main.c  picow_socket.c  socket_impl.c  socket_impl.h
